# truelabel

./: .env.example  .env.local  .env.production.example  .env.production.from-old  .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  CLEAN-ARCHITECTURE-INTEGRATION.md  CLEANUP-REPORT.md  CONTRIBUTING.md  CORRIGIR-CORS-RAILWAY.md  CREDENCIAIS.md  DEPLOY-CHECKLIST.md  DEPLOY-COMPLETO-FUNCIONANDO.md  DEPLOY-PASSO-A-PASSO.md  DEPLOY-STEP-BY-STEP.md  DEPLOYMENT-GUIDE.md  DESIGN-TEST-GUIDE.md  Dockerfile  EXECUTAR-AGORA.md  EXECUTAR-LOCALMENTE.md  FLOW-DOCUMENTATION-SUMMARY.md  INICIAR-SISTEMA.md  INICIO-RAPIDO.md  INSTRUCOES-INICIO.md  INTEGRATION-COMPLETE.md  LICENSE  MAPA-DE-PROCESSOS-TRUELABEL.md  MELHORIAS-IMPLEMENTADAS.md  POSTGRESQL-SETUP-STATUS.md  PRODUCTION-CONFIG.md  PROJECT-COMPLETION-SUMMARY.md  PROJETO-REORGANIZACAO-COMPLETA.md  PROJETO_TRUE_LABEL_DOCUMENTACAO_COMPLETA.md  PROJETO_TRUE_LABEL_STATUS_FINAL.md  QUICK-IMPROVEMENTS-TODAY.md  RAILWAY_DEPLOY_GUIDE.md  README-OLD.md  README.md  (+85 more)
.vercel/: project.json
api/: index.js  package.json
client/: .env  .env.example  .env.production  .vercel-force-rebuild-v3  .vercel-force-rebuild-v4  DESIGN-SYSTEM-ANALYSIS.md  check-status.sh  (+26 more)
trust-label/apps/ai-service/: .env.example  pyproject.toml  requirements.txt
trust-label/apps/ai-service/src/: main.py
trust-label/apps/ai-service/src/api/: __init__.py  ocr.py  validation.py
trust-label/apps/ai-service/src/core/: config.py
trust-label/apps/ai-service/src/models/: validation.py
trust-label/apps/ai-service/src/services/: nlp_service.py  validation_service.py
(+1044 files in other folders)
